weather_service/weather_service/deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-service
spec:
  replicas: 1  # nombre de réplicas souhaitées
  selector:
    matchLabels:
      app: weather-service
  template:
    metadata:
      labels:
        app: weather-service
    spec:
      containers:
      - name: weather-service
        image: younesrebai01/weather-service:latest  # image Docker publiée sur Docker Hub
        ports:
        - containerPort: 8000
