weather_service/weather_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-service
  name: weather-service
spec:
  ports:
    - nodePort: 31282
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: weather-service
  type: LoadBalancer
