weather_service/weather_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: weather.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 8000
